# tic-tac-toe-ai

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  ui.h
src/: game.cpp  main.cpp  ui.cpp
